# LabProgrammazione

./: CMakeLists.txt  Cell.cpp  Cell.h  Celle.pro  Formula.cpp  Formula.h  FormulaMax.cpp  FormulaMax.h  FormulaMean.cpp  FormulaMean.h  FormulaMin.cpp  FormulaMin.h  FormulaSum.cpp  FormulaSum.h  Observer.h  Subject.h  Table.cpp  Table.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
test/: CMakeLists.txt  CellTest.cpp  CellTest.h  FormuleTest.cpp  FormuleTest.h  runAllTests.cpp
